--- a/app/src/main/res/drawable/btn_round.xml
+++ b/app/src/main/res/drawable/btn_round.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#3895d3"
+
+    <solid android:color="#EFF2F4"
         />
-    <corners android:radius="25dp"/>
 
 
 </shape>
