--- a/app/src/main/res/layout/activity_dash_notes_list.xml
+++ b/app/src/main/res/layout/activity_dash_notes_list.xml
@@ -7,11 +7,14 @@
     tools:context=".dash_notes_list">
 
 
+ <include layout="@layout/tollbar_layout"/>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/info_card"
         android:layout_width="match_parent"
         android:layout_height="65dp"
         android:layout_margin="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/toll_bar"
         android:clickable="true"
         android:focusable="true"
         app:cardElevation="3dp"
