--- a/app/src/main/res/layout/activity_event_comment_item.xml
+++ b/app/src/main/res/layout/activity_event_comment_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -43,6 +45,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
                     android:text="@string/stream"
                     android:textSize="14sp"
                     android:textStyle="bold" />
