--- a/app/src/main/res/layout/activity_event_upload.xml
+++ b/app/src/main/res/layout/activity_event_upload.xml
@@ -4,12 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".event_upload">
 
+    <LinearLayout
+        android:id="@+id/toll_bar_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <include layout="@layout/tollbar_layout"/>
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recycle_view"
+        android:layout_below="@+id/toll_bar_name"
         android:scrollbars="vertical">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -17,11 +27,11 @@
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_file_upload_black_24dp"
+        android:layout_margin="30dp"
         android:onClick="btn_uploadEvent"
-        android:layout_margin="30dp"/>
+        android:src="@drawable/ic_file_upload_black_24dp" />
 
 
 </RelativeLayout>
