--- a/app/src/main/res/layout/activity_event_upload_event.xml
+++ b/app/src/main/res/layout/activity_event_upload_event.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".event_upload_event">
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+    <include layout="@layout/tollbar_layout"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -71,5 +76,6 @@
             app:iconGravity="textStart" />
 
     </LinearLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 </ScrollView>
