--- a/app/src/main/res/layout/activity_grp_chat.xml
+++ b/app/src/main/res/layout/activity_grp_chat.xml
@@ -1,16 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".grp_chat">
 
-    <TextView
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toll_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:minHeight="?attr/actionBarSize"
+            android:onClick="open_class"
+            app:titleTextColor="@color/white">
+
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/class_image"
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:src="@mipmap/ic_pen_logo_round" />
+
+            <TextView
+                android:id="@+id/class_name"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:text="@string/grpChats"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+        </com.google.android.material.appbar.MaterialToolbar>
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycle_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="40dp"
+            android:layout_below="@+id/toll_bar" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <RelativeLayout
+        android:id="@+id/rel_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/grpChats"
-        android:textStyle="italic"
-        tools:ignore="MissingConstraints" />
+        android:background="@drawable/btn_round"
+        android:scrollbars="vertical"
+        android:layout_alignParentBottom="true"
+        android:visibility="visible">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        <EditText
+            android:id="@+id/txt_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="53dp"
+            android:gravity="center_vertical"
+            android:hint="@string/typeMsg"
+            android:importantForAutofill="no"
+            android:inputType="textMultiLine"
+            android:maxLines="10"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:scrollbarStyle="outsideOverlay"
+            android:scrollbars="vertical"
+            android:textSize="18sp" />
+
+        <ImageView
+            android:id="@+id/img_send"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_alignEnd="@+id/txt_msg"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="2dp"
+            android:layout_marginEnd="10dp"
+            android:onClick="btn_uploadMsg"
+            android:src="@drawable/ic_send_black_24dp" />
+
+    </RelativeLayout>
+
+
+</RelativeLayout>
